5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1674_1107.log
== TEST (2019-04-30 11:11:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(float("digite o no. correspodente da semana: "))
y = int(float("digite o no. correspodente da semana futuro: "))

if((x!=0) or (x!=1) or (x!= 2) or (x!=3) or (x!=4) or (x!=5) or (x!=6)):
	print("A entrada", x, "eh invalida")
elif(x==0):
	x=="domingo"
elif(x==1):
	x=="segunda"
elif(x==2):
	x=="terca"
elif(x==3):
	x=="quarta"
elif(x==4):
	x=="quinta"
elif(x==5):
	x=="sexta"
elif(x==6):
	x=="sabado"
k = b%7

if(k==0):
	k=="domingo"
elif(k==1):
	k=="segunda"
elif(k==2):
	k=="terca"
elif(k==3):
	k=="quarta"
elif(k==4):
	k=="quinta"
elif(k==5):
	k=="sexta"
elif(k==6):
	k=="sabado"
print("Hoje eh", x, "e o dia futuro eh", k)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = int(float("digite o no. correspodente da semana: "))
ValueError: could not convert string to float: 'digite o no. correspodente da semana: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:12:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(float("digite o no. correspodente da semana: "))
y = int(float("digite o no. correspodente da semana futuro: "))

if((x!=0) or (x!=1) or (x!= 2) or (x!=3) or (x!=4) or (x!=5) or (x!=6)):
	print("A entrada", x, "eh invalida")
elif(x==0):
	x=="domingo"
elif(x==1):
	x=="segunda"
elif(x==2):
	x=="terca"
elif(x==3):
	x=="quarta"
elif(x==4):
	x=="quinta"
elif(x==5):
	x=="sexta"
elif(x==6):
	x=="sabado"
k = b%7

if(k==0):
	k=="domingo"
elif(k==1):
	k=="segunda"
elif(k==2):
	k=="terca"
elif(k==3):
	k=="quarta"
elif(k==4):
	k=="quinta"
elif(k==5):
	k=="sexta"
elif(k==6):
	k=="sabado"
print("Hoje eh", x, "e o dia futuro eh", k)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = int(float("digite o no. correspodente da semana: "))
ValueError: could not convert string to float: 'digite o no. correspodente da semana: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:12:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(float("digite o no. correspodente da semana: "))
y = int(float("digite o no. correspodente da semana futuro: "))

if((x!=0) or (x!=1) or (x!= 2) or (x!=3) or (x!=4) or (x!=5) or (x!=6)):
	print("A entrada", x, "eh invalida")
elif(x==0):
	x=="domingo"
elif(x==1):
	x=="segunda"
elif(x==2):
	x=="terca"
elif(x==3):
	x=="quarta"
elif(x==4):
	x=="quinta"
elif(x==5):
	x=="sexta"
elif(x==6):
	x=="sabado"
k = b%7

if(k==0):
	k=="domingo"
elif(k==1):
	k=="segunda"
elif(k==2):
	k=="terca"
elif(k==3):
	k=="quarta"
elif(k==4):
	k=="quinta"
elif(k==5):
	k=="sexta"
elif(k==6):
	k=="sabado"
print("Hoje eh", x, "e o dia futuro eh", k)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = int(float("digite o no. correspodente da semana: "))
ValueError: could not convert string to float: 'digite o no. correspodente da semana: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:13:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(float("digite o num correspodente da semana: "))
y = int(float("digite o noumcorrespodente da semana futuro: "))

if((x!=0) or (x!=1) or (x!= 2) or (x!=3) or (x!=4) or (x!=5) or (x!=6)):
	print("A entrada", x, "eh invalida")
elif(x==0):
	x=="domingo"
elif(x==1):
	x=="segunda"
elif(x==2):
	x=="terca"
elif(x==3):
	x=="quarta"
elif(x==4):
	x=="quinta"
elif(x==5):
	x=="sexta"
elif(x==6):
	x=="sabado"

k = b%7

if(k==0):
	k=="domingo"
elif(k==1):
	k=="segunda"
elif(k==2):
	k=="terca"
elif(k==3):
	k=="quarta"
elif(k==4):
	k=="quinta"
elif(k==5):
	k=="sexta"
elif(k==6):
	k=="sabado"
print("Hoje eh", x, "e o dia futuro eh", k)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = int(float("digite o num correspodente da semana: "))
ValueError: could not convert string to float: 'digite o num correspodente da semana: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:13:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(float("digite o num correspodente da semana: "))
y = int(float("digite o num correspodente da semana futuro: "))

if((x!=0) or (x!=1) or (x!= 2) or (x!=3) or (x!=4) or (x!=5) or (x!=6)):
	print("A entrada", x, "eh invalida")
elif(x==0):
	x=="domingo"
elif(x==1):
	x=="segunda"
elif(x==2):
	x=="terca"
elif(x==3):
	x=="quarta"
elif(x==4):
	x=="quinta"
elif(x==5):
	x=="sexta"
elif(x==6):
	x=="sabado"

k = b%7

if(k==0):
	k=="domingo"
elif(k==1):
	k=="segunda"
elif(k==2):
	k=="terca"
elif(k==3):
	k=="quarta"
elif(k==4):
	k=="quinta"
elif(k==5):
	k=="sexta"
elif(k==6):
	k=="sabado"
print("Hoje eh", x, "e o dia futuro eh", k)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = int(float("digite o num correspodente da semana: "))
ValueError: could not convert string to float: 'digite o num correspodente da semana: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:14:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(float("digite o num correspodente da semana: "))
y = int(float("digite o num correspodente da semana futuro: "))

if((x!=0) or (x!=1) or (x!= 2) or (x!=3) or (x!=4) or (x!=5) or (x!=6)):
	print("A entrada", x, "eh invalida")
elif(x==0):
	x=="domingo"
elif(x==1):
	x=="segunda"
elif(x==2):
	x=="terca"
elif(x==3):
	x=="quarta"
elif(x==4):
	x=="quinta"
elif(x==5):
	x=="sexta"
elif(x==6):
	x=="sabado"

k = y%7

if(k==0):
	k=="domingo"
elif(k==1):
	k=="segunda"
elif(k==2):
	k=="terca"
elif(k==3):
	k=="quarta"
elif(k==4):
	k=="quinta"
elif(k==5):
	k=="sexta"
elif(k==6):
	k=="sabado"
print("Hoje eh", x, "e o dia futuro eh", k)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = int(float("digite o num correspodente da semana: "))
ValueError: could not convert string to float: 'digite o num correspodente da semana: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:14:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("digite o num correspodente da semana: "))
y = int(input("digite o num correspodente da semana futuro: "))

if((x!=0) or (x!=1) or (x!= 2) or (x!=3) or (x!=4) or (x!=5) or (x!=6)):
	print("A entrada", x, "eh invalida")
elif(x==0):
	x=="domingo"
elif(x==1):
	x=="segunda"
elif(x==2):
	x=="terca"
elif(x==3):
	x=="quarta"
elif(x==4):
	x=="quinta"
elif(x==5):
	x=="sexta"
elif(x==6):
	x=="sabado"

k = y%7

if(k==0):
	k=="domingo"
elif(k==1):
	k=="segunda"
elif(k==2):
	k=="terca"
elif(k==3):
	k=="quarta"
elif(k==4):
	k=="quinta"
elif(k==5):
	k=="sexta"
elif(k==6):
	k=="sabado"
print("Hoje eh", x, "e o dia futuro eh", k)
	
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:18:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("digite o num correspodente da semana: "))
y = int(input("digite o num correspodente da semana futuro: "))
0= "domingo"
1= "segunda"
2= "terca"
3= "quarta"
4= "quinta"
5= "sexta"
6= "sabado"

if((x!=0) or (x!=1) or (x!= 2) or (x!=3) or (x!=4) or (x!=5) or (x!=6)):
	print("A entrada", x, "eh invalida")
elif(x==0):
	print(0)

k = y%7

if(k==0):
	k=="domingo"
elif(k==1):
	k=="segunda"
elif(k==2):
	k=="terca"
elif(k==3):
	k=="quarta"
elif(k==4):
	k=="quinta"
elif(k==5):
	k=="sexta"
elif(k==6):
	k=="sabado"
print("Hoje eh", x, "e o dia futuro eh", k)
	
-- ERROR:
File "XXXX", line 6
    0= "domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:39:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))

futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(dia==0):
		x=="domingo"
	elif(dia==1):
		x=="segunda"
	elif(dia==2):
		x=="terca"
	elif(dia==3):
		x=="quarta"
	elif(dia==4):
		x=="quinta"
	elif(dia==5):
		x=="sexta"
	elif(dia==6):
		x=="sabado"
else:
	print("A entrada", dia, "eh invalida")

if((diafut>=0) and (diafut<=6)):
	if(diafut==0):
		y=="domingo"
	elif(diafut==1):
		y=="segunda"
	elif(diafut==2):
		y=="terca"
	elif(diafut==3):
		y=="quarta"
	elif(diafut==4):
		y=="quinta"
	elif(diafut==5):
		y=="sexta"
	elif(diafut==6):
		y=="sabado"

print("Hoje eh", x, "e o dia futuro eh", y)
	
		
-- EXECUTION TIME:
0.174191
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 43, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:39:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))

futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(dia==0):
		x=="domingo"
	elif(dia==1):
		x=="segunda"
	elif(dia==2):
		x=="terca"
	elif(dia==3):
		x=="quarta"
	elif(dia==4):
		x=="quinta"
	elif(dia==5):
		x=="sexta"
	elif(dia==6):
		x=="sabado"
else:
	print("A entrada", dia, "eh invalida")

if((diafut>=0) and (diafut<=6)):
	if(diafut==0):
		y=="domingo"
	elif(diafut==1):
		y=="segunda"
	elif(diafut==2):
		y=="terca"
	elif(diafut==3):
		y=="quarta"
	elif(diafut==4):
		y=="quinta"
	elif(diafut==5):
		y=="sexta"
	elif(diafut==6):
		y=="sabado"

print("Hoje eh", x, "e o dia futuro eh", y)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 43, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:41:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))

futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(dia==0):
		dia=="domingo"
	elif(dia==1):
		dia=="segunda"
	elif(dia==2):
		dia=="terca"
	elif(dia==3):
		dia=="quarta"
	elif(dia==4):
		dia=="quinta"
	elif(dia==5):
		dia=="sexta"
	elif(dia==6):
		dia=="sabado"
else:
	print("A entrada", dia, "eh invalida")

if((diafut>=0) and (diafut<=6)):
	if(diafut==0):
		diafut=="domingo"
	elif(diafut==1):
		diafut=="segunda"
	elif(diafut==2):
		diafut=="terca"
	elif(diafut==3):
		diafut=="quarta"
	elif(diafut==4):
		diafut=="quinta"
	elif(diafut==5):
		diafut=="sexta"
	elif(diafut==6):
		diafut=="sabado"

print("Hoje eh", dia, "e o dia futuro eh", diafut)
	
		
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:51:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))

futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(dia==0):
		x="domingo"
	elif(dia==1):
		x="segunda"
	elif(dia==2):
		x="terca"
	elif(dia==3):
		x="quarta"
	elif(dia==4):
		x="quinta"
	elif(dia==5):
		x="sexta"
	elif(dia==6):
		x="sabado"
else:
	print("A entrada", dia, "eh invalida")

if((diafut>=0) and (diafut<=6)):
	if(diafut==0):
		y="domingo"
	elif(diafut==1):
		y="segunda"
	elif(diafut==2):
		y="terca"
	elif(diafut==3):
		y="quarta"
	elif(diafut==4):
		y="quinta"
	elif(diafut==5):
		y="sexta"
	elif(diafut==6):
		y="sabado"

print("Hoje eh", x, "e o dia futuro eh", y)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 43, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:52:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))

futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(dia==0):
		x="domingo"
	elif(dia==1):
		x="segunda"
	elif(dia==2):
		x="terca"
	elif(dia==3):
		x="quarta"
	elif(dia==4):
		x="quinta"
	elif(dia==5):
		x="sexta"
	elif(dia==6):
		x="sabado"
else:
	print("A entrada", dia, "eh invalida")

if((diafut>=0) and (diafut<=6)):
	if(diafut==0):
		y="domingo"
	elif(diafut==1):
		y="segunda"
	elif(diafut==2):
		y="terca"
	elif(diafut==3):
		y="quarta"
	elif(diafut==4):
		y="quinta"
	elif(diafut==5):
		y="sexta"
	elif(diafut==6):
		y="sabado"

print("Hoje eh", x, "e o dia futuro eh", y)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 43, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:52:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))

futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(dia==0):
		x="domingo"
	elif(dia==1):
		x="segunda"
	elif(dia==2):
		x="terca"
	elif(dia==3):
		x="quarta"
	elif(dia==4):
		x="quinta"
	elif(dia==5):
		x="sexta"
	elif(dia==6):
		x="sabado"
else:
	print("A entrada", dia, "eh invalida")

if((diafut>=0) and (diafut<=6)):
	if(diafut==0):
		y="domingo"
	elif(diafut==1):
		y="segunda"
	elif(diafut==2):
		y="terca"
	elif(diafut==3):
		y="quarta"
	elif(diafut==4):
		y="quinta"
	elif(diafut==5):
		y="sexta"
	elif(diafut==6):
		y="sabado"

print("Hoje eh", x, "e o dia futuro eh",y)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 43, in <module>
    print("Hoje eh", x, "e o dia futuro eh",y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:54:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
y = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(dia==0):
		x="domingo"
	elif(dia==1):
		x="segunda"
	elif(dia==2):
		x="terca"
	elif(dia==3):
		x="quarta"
	elif(dia==4):
		x="quinta"
	elif(dia==5):
		x="sexta"
	elif(dia==6):
		x="sabado"
else:
	print("A entrada", dia, "eh invalida")

if((diafut>=0) and (diafut<=6)):
	if(diafut==0):
		y="domingo"
	elif(diafut==1):
		y="segunda"
	elif(diafut==2):
		y="terca"
	elif(diafut==3):
		y="quarta"
	elif(diafut==4):
		y="quinta"
	elif(diafut==5):
		y="sexta"
	elif(diafut==6):
		y="sabado"

print("Hoje eh", x, "e o dia futuro eh",y)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 42, in <module>
    print("Hoje eh", x, "e o dia futuro eh",y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:56:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(dia==0):
		x="domingo"
	elif(dia==1):
		x="segunda"
	elif(dia==2):
		x="terca"
	elif(dia==3):
		x="quarta"
	elif(dia==4):
		x="quinta"
	elif(dia==5):
		x="sexta"
	elif(dia==6):
		x="sabado"
else:
	print("A entrada", dia, "eh invalida")

if((futuro>=0) and (futuro<=6)):
	if(futuro==0):
		y="domingo"
	elif(futuro==1):
		y="segunda"
	elif(futuro==2):
		y="terca"
	elif(futuro==3):
		y="quarta"
	elif(futuro==4):
		y="quinta"
	elif(futuro==5):
		y="sexta"
	elif(futuro==6):
		y="sabado"

print("Hoje eh", x, "e o dia futuro eh",y)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 42, in <module>
    print("Hoje eh", x, "e o dia futuro eh",y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:56:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(dia==0):
		x="domingo"
	elif(dia==1):
		x="segunda"
	elif(dia==2):
		x="terca"
	elif(dia==3):
		x="quarta"
	elif(dia==4):
		x="quinta"
	elif(dia==5):
		x="sexta"
	elif(dia==6):
		x="sabado"
else:
	print("A entrada", dia, "eh invalida")

if((futuro>=0) and (futuro<=6)):
	if(futuro==0):
		y="domingo"
	elif(futuro==1):
		y="segunda"
	elif(futuro==2):
		y="terca"
	elif(futuro==3):
		y="quarta"
	elif(futuro==4):
		y="quinta"
	elif(futuro==5):
		y="sexta"
	elif(futuro==6):
		y="sabado"

print("Hoje eh", x, "e o dia futuro eh",y)
	
		
-- EXECUTION TIME:
0.166233
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 42, in <module>
    print("Hoje eh", x, "e o dia futuro eh",y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:56:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(dia==0):
		x="domingo"
	elif(dia==1):
		x="segunda"
	elif(dia==2):
		x="terca"
	elif(dia==3):
		x="quarta"
	elif(dia==4):
		x="quinta"
	elif(dia==5):
		x="sexta"
	elif(dia==6):
		x="sabado"
else:
	print("A entrada", dia, "eh invalida")

if((futuro>=0) and (futuro<=6)):
	if(futuro==0):
		y="domingo"
	elif(futuro==1):
		y="segunda"
	elif(futuro==2):
		y="terca"
	elif(futuro==3):
		y="quarta"
	elif(futuro==4):
		y="quinta"
	elif(futuro==5):
		y="sexta"
	elif(futuro==6):
		y="sabado"

print("Hoje eh", x, "e o dia futuro eh",y)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 42, in <module>
    print("Hoje eh", x, "e o dia futuro eh",y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:57:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(dia==0):
		x="domingo"
	elif(dia==1):
		x="segunda"
	elif(dia==2):
		x="terca"
	elif(dia==3):
		x="quarta"
	elif(dia==4):
		x="quinta"
	elif(dia==5):
		x="sexta"
	elif(dia==6):
		x="sabado"
else:
	print("A entrada", dia, "eh invalida")

if((futuro>=0) and (futuro<=6)):
	if(futuro==0):
		y="domingo"
	elif(futuro==1):
		y="segunda"
	elif(futuro==2):
		y="terca"
	elif(futuro==3):
		y="quarta"
	elif(futuro==4):
		y="quinta"
	elif(futuro==5):
		y="sexta"
	elif(futuro==6):
		y="sabado"

print("Hoje eh", x, "e o dia futuro eh",y)
	
		
-- EXECUTION TIME:
0.236255
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 42, in <module>
    print("Hoje eh", x, "e o dia futuro eh",y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:57:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(dia==0):
		x="domingo"
	elif(dia==1):
		x="segunda"
	elif(dia==2):
		x="terca"
	elif(dia==3):
		x="quarta"
	elif(dia==4):
		x="quinta"
	elif(dia==5):
		x="sexta"
	elif(dia==6):
		x="sabado"
else:
	print("A entrada", dia, "eh invalida")

if((futuro>=0) and (futuro<=6)):
	if(futuro==0):
		y="domingo"
	elif(futuro==1):
		y="segunda"
	elif(futuro==2):
		y="terca"
	elif(futuro==3):
		y="quarta"
	elif(futuro==4):
		y="quinta"
	elif(futuro==5):
		y="sexta"
	elif(futuro==6):
		y="sabado"

print("Hoje eh", x, "e o dia futuro eh",y)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 42, in <module>
    print("Hoje eh", x, "e o dia futuro eh",y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:26:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if(dia==0):
	x="domingo"
elif(dia==1):
	x="segunda"
elif(dia==2):
	x="terca"
elif(dia==3):
	x="quarta"
elif(dia==4):
	x="quinta"
elif(dia==5):
	x="sexta"
elif(dia==6):
	x="sabado"
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:27:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if(dia==0):
	x="domingo"
elif(dia==1):
	x="segunda"
elif(dia==2):
	x="terca"
elif(dia==3):
	x="quarta"
elif(dia==4):
	x="quinta"
elif(dia==5):
	x="sexta"
elif(dia==6):
	x="sabado"
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:32:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if(dia==0):
	x="domingo"
elif(dia==1):
	x="segunda"
elif(dia==2):
	x="terca"
elif(dia==3):
	x="quarta"
elif(dia==4):
	x="quinta"
elif(dia==5):
	x="sexta"
elif(dia==6):
	x="sabado"
else:
	print("A entrada", dia, "eh invalida")
if(futuro==0):
	y="domingo"
elif(futuro==1):
	y="segunda"
elif(futuro==2):
	y="terca"
elif(futuro==3):
	y="quarta"
elif(futuro==4):
	y="quinta"
elif(futuro==5):
	y="sexta"
elif(futuro==6):
	y=="sabado"

print("Hoje eh", x, "e o dia futuro eh", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 39, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:34:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if(dia==0):
	x="domingo"
elif(dia==1):
	x="segunda"
elif(dia==2):
	x="terca"
elif(dia==3):
	x="quarta"
elif(dia==4):
	x="quinta"
elif(dia==5):
	x="sexta"
elif(dia==6):
	x="sabado"
else:
	print("A entrada", dia, "eh invalida")
if(futuro==0):
	y="domingo"
elif(futuro==1):
	y="segunda"
elif(futuro==2):
	y="terca"
elif(futuro==3):
	y="quarta"
elif(futuro==4):
	y="quinta"
elif(futuro==5):
	y="sexta"
elif(futuro==6):
	y=="sabado"

print("Hoje eh", x, "e o dia futuro eh", y)
-- EXECUTION TIME:
0.212608
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 39, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:34:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if(dia==0):
	x="domingo"
elif(dia==1):
	x="segunda"
elif(dia==2):
	x="terca"
elif(dia==3):
	x="quarta"
elif(dia==4):
	x="quinta"
elif(dia==5):
	x="sexta"
elif(dia==6):
	x="sabado"
else:
	print("A entrada", dia, "eh invalida")
if(futuro==0):
	y="domingo"
elif(futuro==1):
	y="segunda"
elif(futuro==2):
	y="terca"
elif(futuro==3):
	y="quarta"
elif(futuro==4):
	y="quinta"
elif(futuro==5):
	y="sexta"
elif(futuro==6):
	y=="sabado"

print("Hoje eh", x, "e o dia futuro eh", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 39, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:35:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if(dia==0):
	x="domingo"
elif(dia==1):
	x="segunda"
elif(dia==2):
	x="terca"
elif(dia==3):
	x="quarta"
elif(dia==4):
	x="quinta"
elif(dia==5):
	x="sexta"
elif(dia==6):
	x="sabado"
else:
	print("A entrada", dia, "eh invalida")
if(futuro==0):
	y="domingo"
elif(futuro==1):
	y="segunda"
elif(futuro==2):
	y="terca"
elif(futuro==3):
	y="quarta"
elif(futuro==4):
	y="quinta"
elif(futuro==5):
	y="sexta"
elif(futuro==6):
	y=="sabado"

print("Hoje eh", x, "e o dia futuro eh", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 39, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:37:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if(dia==0):
	x="domingo"
elif(dia==1):
	x="segunda"
elif(dia==2):
	x="terca"
elif(dia==3):
	x="quarta"
elif(dia==4):
	x="quinta"
elif(dia==5):
	x="sexta"
elif(dia==6):
	x="sabado"
else:
	print("A entrada", dia, "eh invalida")
if(futuro==0):
	y="domingo"
elif(futuro==1):
	y="segunda"
elif(futuro==2):
	y="terca"
elif(futuro==3):
	y="quarta"
elif(futuro==4):
	y="quinta"
elif(futuro==5):
	y="sexta"
elif(futuro==6):
	y=="sabado"

print("Hoje eh", x, "e o dia futuro eh", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 39, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:46:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
else:
	print("A entrada", dia, "eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 41, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:48:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
	else:
		print("A entrada", dia, "eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 41, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:50:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
	else:
		print("A entrada", dia, "eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 41, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:50:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
	else:
		print("A entrada", dia, "eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)
-- EXECUTION TIME:
0.189954
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 41, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:50:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
else:
	print("A entrada", dia, "eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)
-- EXECUTION TIME:
0.154065
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 41, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:50:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
else:
	print("A entrada", dia, "eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)
-- EXECUTION TIME:
0.226746
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 41, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:50:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		else:
			print("A entrada", dia, "eh invalida")
	
print("Hoje eh", x, "e o dia futuro eh", y)
-- EXECUTION TIME:
0.179976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 41, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:56:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
else:
	print("A entrada", dia, "eh invalida")
	
print("Hoje eh", x, "e o dia futuro eh", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 41, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:57:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
else:
	print("A entrada", dia, "eh invalida")
	
print("Hoje eh", dia, "e o dia futuro eh", futuro)
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:03:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", dia, "e o dia futuro eh", futuro)
	else:
	print("A entrada", diafut, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")
	
print("Hoje eh", dia, "e o dia futuro eh", futuro)
-- EXECUTION TIME:
0.198904
-- ERROR:
  File "/home/codebench/codes/1674/1107/main.py", line 40
    print("A entrada", diafut, "eh invalida")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:03:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", dia, "e o dia futuro eh", futuro)
	else:
	print("A entrada", diafut, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")
	
print("Hoje eh", dia, "e o dia futuro eh", futuro)
-- ERROR:
File "XXXX", line 40
    print("A entrada", diafut, "eh invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:04:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", dia, "e o dia futuro eh", futuro)
	else:
		print("A entrada", diafut, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")
	
print("Hoje eh", dia, "e o dia futuro eh", futuro)
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:04:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", dia, "e o dia futuro eh", futuro)
	else:
		print("A entrada", diafut, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")
	
print("Hoje eh", dia, "e o dia futuro eh", futuro)
-- EXECUTION TIME:
0.292859
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 4
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh 6 e o dia futuro eh 1
Hoje eh 6 e o dia futuro eh 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:04:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", dia, "e o dia futuro eh", futuro)
	else:
		print("A entrada", diafut, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")

-- EXECUTION TIME:
0.226816
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh 6 e o dia futuro eh 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:05:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", diafut, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")

-- EXECUTION TIME:
0.131911
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:05:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", diafut, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:06:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", diafut, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:06:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", diafut, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:06:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("digite o num correspodente da semana: "))
diafut = int(input("digite o num correspodente da semana futuro: "))
futuro = (dia+diafut)%7

if((dia>=0) and (dia<=6)):
	if(diafut>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", diafut, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")

-- EXECUTION TIME:
0.197988
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
